--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">SampleAndroidStringResGenerator</string>
+    <string name="app_name" translatable="false">SampleAndroidStringResGenerator</string>
 </resources>
